--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1 origin=centre>  This is my first task of Cloud Computing under the guidance of respected Vimal Daga Sir </h1>
+<h1 origin=centre>  <b> This is my first task of Cloud Computing under the guidance of respected Vimal Daga Sir </b> </h1>
 <img src="https://nikhilcloudtc1.s3.ap-south-1.amazonaws.com/nikhil.jpg" width="200" height="300">
 <br>
 <h1> Nikhil Chandra </h1>
